--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/toll_collector_dashboard.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/toll_collector_dashboard.fxml
@@ -21,13 +21,13 @@
             <VBox prefHeight="438.0" prefWidth="135.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="btnCollectCashScreen" mnemonicParsing="false" onAction="#openCollectCashScreen" prefHeight="35.0" prefWidth="135.0" text="Collect Cash Toll" />
-                  <Button fx:id="btnScanTagScreen" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="Scan Tag for Payment" />
-                  <Button fx:id="btnViewTollRatesScreen" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="View Toll Rate Chart" />
-                  <Button fx:id="btnFlagVehicleScreen" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="Flag Vehicle" />
-                  <Button fx:id="btnIssueTemporaryTagScreen" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="Issue Temporary Tag" />
-                  <Button fx:id="btnReportIssueScreen" mnemonicParsing="false" prefWidth="135.0" text="Report Issue" />
-                  <Button fx:id="btnViewShiftSummaryScreen" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="View Shift Summary" />
-                  <Button fx:id="btnLogout" mnemonicParsing="false" prefHeight="35.0" prefWidth="135.0" text="Logout" />
+                  <Button fx:id="btnScanTagScreen" mnemonicParsing="false" onAction="#openScanTagForPayment" prefHeight="35.0" prefWidth="135.0" text="Scan Tag for Payment" />
+                  <Button fx:id="btnViewTollRatesScreen" mnemonicParsing="false" onAction="#openViewTollRate" prefHeight="35.0" prefWidth="135.0" text="View Toll Rate Chart" />
+                  <Button fx:id="btnFlagVehicleScreen" mnemonicParsing="false" onAction="#openFlagVehicle" prefHeight="35.0" prefWidth="135.0" text="Flag Vehicle" />
+                  <Button fx:id="btnIssueTemporaryTagScreen" mnemonicParsing="false" onAction="#openIssueTemporaryTag" prefHeight="35.0" prefWidth="135.0" text="Issue Temporary Tag" />
+                  <Button fx:id="btnReportIssueScreen" mnemonicParsing="false" onAction="#openReportIssue" prefWidth="135.0" text="Report Issue" />
+                  <Button fx:id="btnViewShiftSummaryScreen" mnemonicParsing="false" onAction="#openViewShiftSummary" prefHeight="35.0" prefWidth="135.0" text="View Shift Summary" />
+                  <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="135.0" text="Logout" />
                </children>
             </VBox>
          </left>
