--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/pay_toll_online.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/pay_toll_online.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Mustain_2331493.VehicleOwner.PayTollOnlineController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="63.0" prefWidth="700.0" style="-fx-background-color: a8a8a6;" text="Pay Toll Online">
@@ -34,7 +33,7 @@
       <TextField fx:id="txtTollAmount" layoutX="252.0" layoutY="143.0" />
       <ComboBox fx:id="comboPaymentMethod" layoutX="252.0" layoutY="182.0" prefWidth="150.0" />
       <Button fx:id="btnPayToll" layoutX="91.0" layoutY="257.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Pay" />
-      <Button fx:id="btnBack" layoutX="479.0" layoutY="257.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Back" />
+      <Button fx:id="btnBack" layoutX="479.0" layoutY="257.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
       <Button fx:id="btnCancel" layoutX="276.0" layoutY="257.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
    </children>
 </AnchorPane>
