--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/view_trip_history.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/view_trip_history.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Mustain_2331493.VehicleOwner.ViewTripHistoryController">
    <children>
       <Label alignment="CENTER" layoutY="-1.0" prefHeight="59.0" prefWidth="700.0" style="-fx-background-color: a8a8a6;" text="Trip History">
@@ -46,6 +45,6 @@
       </TableView>
       <Button fx:id="btnSearchTrips" layoutX="132.0" layoutY="217.0" mnemonicParsing="false" text="Search " />
       <Button fx:id="btnDownloadTripPDF" layoutX="303.0" layoutY="217.0" mnemonicParsing="false" text="Download PDF" />
-      <Button fx:id="btnBack" layoutX="504.0" layoutY="217.0" mnemonicParsing="false" text="Back" />
+      <Button fx:id="btnBack" layoutX="504.0" layoutY="217.0" mnemonicParsing="false" onAction="#goBackToDashboard" text="Back" />
    </children>
 </AnchorPane>
