--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/flag_vehicle.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/flag_vehicle.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Mustain_2331493.TollCollector.FlagVehicleController">
    <children>
       <Label alignment="CENTER" prefHeight="62.0" prefWidth="710.0" style="-fx-background-color: a8a8a6;" text="Flag Vehicle">
@@ -28,7 +27,7 @@
       <TextArea fx:id="txtReason" layoutX="160.0" layoutY="161.0" prefHeight="200.0" prefWidth="504.0" />
       <TextField fx:id="txtVehicleNumber" layoutX="160.0" layoutY="105.0" />
       <Button fx:id="btnSubmitFlag" layoutX="145.0" layoutY="415.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Submit" />
-      <Button fx:id="btnBack" layoutX="533.0" layoutY="415.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Back" />
+      <Button fx:id="btnBack" layoutX="533.0" layoutY="415.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
       <Button fx:id="btnCancel" layoutX="330.0" layoutY="415.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
    </children>
 </AnchorPane>
