--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/issue_temporary_tag.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/issue_temporary_tag.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Mustain_2331493.TollCollector.IssueTemporaryTagController">
    <children>
       <Label alignment="CENTER" layoutX="-2.0" prefHeight="62.0" prefWidth="710.0" style="-fx-background-color: a8a8a6;" text="Issue Temporary Tag">
@@ -31,7 +30,7 @@
          </font>
       </Label>
       <Button fx:id="btnIssueTag" layoutX="101.0" layoutY="294.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Issue Tag" />
-      <Button fx:id="btnBack" layoutX="489.0" layoutY="294.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Back" />
+      <Button fx:id="btnBack" layoutX="489.0" layoutY="294.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
       <Button fx:id="btnCancel" layoutX="286.0" layoutY="294.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
       <TextField fx:id="txtVehicleNumber" layoutX="262.0" layoutY="111.0" />
       <TextField fx:id="txtTempTagID" layoutX="262.0" layoutY="153.0" />
