--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/report_issue.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/report_issue.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Mustain_2331493.TollCollector.ReportIssueController">
    <children>
       <Label alignment="CENTER" prefHeight="62.0" prefWidth="710.0" style="-fx-background-color: a8a8a6;" text="Issue Temporary Tag">
@@ -28,7 +27,7 @@
       <TextArea fx:id="txtDescription" layoutX="136.0" layoutY="138.0" prefHeight="200.0" prefWidth="504.0" />
       <ComboBox fx:id="comboIssueType" layoutX="136.0" layoutY="96.0" prefWidth="150.0" />
       <Button fx:id="btnSubmitIssue" layoutX="136.0" layoutY="367.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Submit" />
-      <Button fx:id="btnBack" layoutX="524.0" layoutY="367.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Back" />
+      <Button fx:id="btnBack" layoutX="524.0" layoutY="367.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
       <Button fx:id="btnCancel" layoutX="321.0" layoutY="367.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
    </children>
 </AnchorPane>
