--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/shift_summary.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/shift_summary.fxml
@@ -58,6 +58,6 @@
          </children>
       </HBox>
       <Button fx:id="btnExportPDF" layoutX="93.0" layoutY="409.0" mnemonicParsing="false" text="Export as PDF" />
-      <Button fx:id="btnBack" layoutX="441.0" layoutY="409.0" mnemonicParsing="false" text="Back to Dashboard" />
+      <Button fx:id="btnBack" layoutX="441.0" layoutY="409.0" mnemonicParsing="false" onAction="#goBackToDashboard" text="Back to Dashboard" />
    </children>
 </AnchorPane>
