--- a/src/main/resources/com/cse213project/toll_plaza_management/common/login.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/common/login.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -17,6 +17,6 @@
      <TextField fx:id="usernameField" layoutX="168.0" layoutY="144.0" prefHeight="38.0" prefWidth="321.0" promptText="Username" />
      <PasswordField fx:id="passwordField" layoutX="168.0" layoutY="194.0" prefHeight="38.0" prefWidth="321.0" promptText="Password" />
      <Button layoutX="292.0" layoutY="323.0" onAction="#HandleLogin" prefHeight="38.0" prefWidth="74.0" text="Login" />
-   <ChoiceBox fx:id="roleChoiceBox" layoutX="254.0" layoutY="262.0" prefWidth="150.0" />
    <Label fx:id="errorLabel" layoutX="236.0" layoutY="388.0" prefHeight="62.0" prefWidth="187.0" />
+   <ComboBox fx:id="roleCombobox" layoutX="255.0" layoutY="270.0" prefWidth="150.0" />
 </AnchorPane>
