--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cse213_ms3_group43_2312005_2320524_tollplazamanagement.TemporaryBlockController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.TemporaryBlockController">
    <children>
       <Button layoutX="89.0" layoutY="63.0" mnemonicParsing="false" onAction="#blocklaneOnaction" prefHeight="49.0" prefWidth="102.0" text="Block Lane" />
       <ComboBox fx:id="selectlaneCb" layoutX="89.0" layoutY="134.0" prefWidth="150.0" promptText="Select lane " />
