--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/recharge_tag.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/VehicleOwner/recharge_tag.fxml
@@ -25,8 +25,8 @@
       </Label>
       <TextField fx:id="txtTagID" layoutX="226.0" layoutY="110.0" />
       <TextField fx:id="txtRechargeAmount" layoutX="226.0" layoutY="157.0" />
-      <Button fx:id="btnRecharge" layoutX="101.0" layoutY="267.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Recharge" />
+      <Button fx:id="btnRecharge" layoutX="101.0" layoutY="267.0" mnemonicParsing="false" onAction="#btnRechargeAction" prefHeight="37.0" prefWidth="69.0" text="Recharge" />
       <Button fx:id="btnBack" layoutX="489.0" layoutY="267.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
-      <Button fx:id="btnCancel" layoutX="293.0" layoutY="267.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
+      <Button fx:id="btnCancel" layoutX="293.0" layoutY="267.0" mnemonicParsing="false" onAction="#btnCancelAction" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
    </children>
 </AnchorPane>
