--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/flag_vehicle.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/flag_vehicle.fxml
@@ -26,8 +26,8 @@
       </Label>
       <TextArea fx:id="txtReason" layoutX="160.0" layoutY="161.0" prefHeight="200.0" prefWidth="504.0" />
       <TextField fx:id="txtVehicleNumber" layoutX="160.0" layoutY="105.0" />
-      <Button fx:id="btnSubmitFlag" layoutX="145.0" layoutY="415.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Submit" />
+      <Button fx:id="btnSubmitFlag" layoutX="145.0" layoutY="415.0" mnemonicParsing="false" onAction="#onSubmitFlag" prefHeight="37.0" prefWidth="69.0" text="Submit" />
       <Button fx:id="btnBack" layoutX="533.0" layoutY="415.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
-      <Button fx:id="btnCancel" layoutX="330.0" layoutY="415.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
+      <Button fx:id="btnCancel" layoutX="330.0" layoutY="415.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
    </children>
 </AnchorPane>
