--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/issue_temporary_tag.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/issue_temporary_tag.fxml
@@ -29,9 +29,9 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnIssueTag" layoutX="101.0" layoutY="294.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Issue Tag" />
+      <Button fx:id="btnIssueTag" layoutX="101.0" layoutY="294.0" mnemonicParsing="false" onAction="#onIssueTag" prefHeight="37.0" prefWidth="69.0" text="Issue Tag" />
       <Button fx:id="btnBack" layoutX="489.0" layoutY="294.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="69.0" text="Back" />
-      <Button fx:id="btnCancel" layoutX="286.0" layoutY="294.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
+      <Button fx:id="btnCancel" layoutX="286.0" layoutY="294.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="37.0" prefWidth="69.0" text="Cancel" />
       <TextField fx:id="txtVehicleNumber" layoutX="262.0" layoutY="111.0" />
       <TextField fx:id="txtTempTagID" layoutX="262.0" layoutY="153.0" />
       <DatePicker fx:id="dateExpiry" layoutX="262.0" layoutY="200.0" prefHeight="25.0" prefWidth="150.0" />
