--- a/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/scan_tag.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Mustain_2331493/TollCollector/scan_tag.fxml
@@ -25,9 +25,9 @@
       </Label>
       <TextField fx:id="txtTagID" layoutX="292.0" layoutY="122.0" />
       <TextField fx:id="lblVehicleNumber" layoutX="292.0" layoutY="169.0" />
-      <Button fx:id="btnDeductToll" layoutX="105.0" layoutY="366.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="91.0" text="Deduct Toll" />
-      <Button fx:id="btnBack" layoutX="493.0" layoutY="366.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="91.0" text="Back" />
-      <Button fx:id="btnCancel" layoutX="297.0" layoutY="366.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="91.0" text="Cancel" />
+      <Button fx:id="btnDeductToll" layoutX="247.0" layoutY="366.0" mnemonicParsing="false" onAction="#onDeductToll" prefHeight="37.0" prefWidth="91.0" text="Deduct Toll" />
+      <Button fx:id="btnBack" layoutX="542.0" layoutY="366.0" mnemonicParsing="false" onAction="#goBackToDashboard" prefHeight="37.0" prefWidth="91.0" text="Back" />
+      <Button fx:id="btnCancel" layoutX="396.0" layoutY="366.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="37.0" prefWidth="91.0" text="Cancel" />
       <Label layoutX="136.0" layoutY="218.0" text="Owner Name">
          <font>
             <Font size="14.0" />
@@ -40,5 +40,6 @@
       </Label>
       <TextField fx:id="lblOwnerName" layoutX="292.0" layoutY="216.0" />
       <TextField fx:id="lblBalance" layoutX="292.0" layoutY="263.0" />
+      <Button layoutX="97.0" layoutY="366.0" mnemonicParsing="false" onAction="#onScanTag" prefHeight="37.0" prefWidth="91.0" text="Scan Tag" />
    </children>
 </AnchorPane>
