--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/a.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/a.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Maintenance_Staff.A"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Maintenance_Staff.MaintenanceStuffDashboardController">
+   <children>
+      <Label layoutX="155.0" layoutY="22.0" text="Maintenance Stuff Dashboard">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
+      <Button layoutX="58.0" layoutY="71.0" mnemonicParsing="false" onAction="#viewactivemaintenceissueOnaction" text="View active maintence issue" />
+      <Button layoutX="58.0" layoutY="108.0" mnemonicParsing="false" onAction="#updaterepairstatusOnaction" text="Update repair status" />
+      <Button layoutX="58.0" layoutY="146.0" mnemonicParsing="false" onAction="#scheduleequipmentrepairsOnaction" text="Schedule equipment repairs" />
+      <Button layoutX="58.0" layoutY="187.0" mnemonicParsing="false" onAction="#acknowledgenewissueOnaction" text="Acknowledge new issue" />
+      <Button layoutX="58.0" layoutY="227.0" mnemonicParsing="false" onAction="#rundiagonsticsonboothhardwareOnaction" text="Run diagonstics on booth hardware" />
+      <Button layoutX="58.0" layoutY="267.0" mnemonicParsing="false" onAction="#uploadmaintenancereportsOnaction" text="Upload maintenance reports" />
+      <Button layoutX="58.0" layoutY="304.0" mnemonicParsing="false" onAction="#markaboothasoperationOnaction" text="Mark a booth as operation" />
+      <Button layoutX="58.0" layoutY="342.0" mnemonicParsing="false" onAction="#communictaesystemstatusOnaction" text="Communictae system status" />
+      <Button layoutX="463.0" layoutY="342.0" mnemonicParsing="false" onAction="#sihnOutOnaction" text="Sign Out" />
+   </children>
 </AnchorPane>
