--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/scheduleequipmentrepairs.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/scheduleequipmentrepairs.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Maintenance_Staff.ScheduleequipmentrepairsController">
    <children>
       <ComboBox fx:id="timeSlotCb" layoutX="76.0" layoutY="85.0" prefWidth="150.0" promptText="Time Slot" />
@@ -28,5 +27,10 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Button layoutX="478.0" layoutY="332.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
