--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/communicatesystem.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/communicatesystem.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Maintenance_Staff.CommunicatesystemController">
    <children>
       <Label layoutX="113.0" layoutY="21.0" text="Communicate System Status to Admin">
@@ -29,5 +28,10 @@
       </TableView>
       <Button layoutX="441.0" layoutY="277.0" mnemonicParsing="false" onAction="#sendToAdminOnaction" prefHeight="53.0" prefWidth="113.0" text="Send To Admin" />
       <DatePicker fx:id="dateSentDp" layoutX="43.0" layoutY="123.0" promptText="Date Sent" />
+      <Button layoutX="498.0" layoutY="346.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
