--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/rundiagnostics.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Maintenance_Staff/rundiagnostics.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Maintenance_Staff.RundiagnosticsController">
    <children>
       <TextArea fx:id="diagnosticsReportTa" layoutX="55.0" layoutY="65.0" prefHeight="200.0" prefWidth="200.0" promptText="Diagnostics Report" />
       <ComboBox fx:id="hardwareSelectCb" layoutX="55.0" layoutY="307.0" prefWidth="150.0" promptText="Hardware Select" />
-      <Button layoutX="407.0" layoutY="307.0" mnemonicParsing="false" onAction="#runDiagnosticsOnaction" text="Run Diagnostics">
+      <Button layoutX="421.0" layoutY="227.0" mnemonicParsing="false" onAction="#runDiagnosticsOnaction" text="Run Diagnostics">
          <font>
             <Font size="17.0" />
          </font>
@@ -22,5 +21,10 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Button layoutX="496.0" layoutY="332.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
