--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/ExportDailyTraffic.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/ExportDailyTraffic.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.ExportDailyTrafficController">
    <children>
       <Label layoutX="113.0" layoutY="27.0" text="Export daily traffic and incident  report">
@@ -28,5 +27,10 @@
          </font>
       </Button>
       <TextArea fx:id="reportTf" layoutX="63.0" layoutY="188.0" prefHeight="200.0" prefWidth="200.0" promptText="Report" />
+      <Button layoutX="487.0" layoutY="341.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
