--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/TemporaryBlock.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.TemporaryBlockController">
    <children>
       <Button layoutX="89.0" layoutY="63.0" mnemonicParsing="false" onAction="#blocklaneOnaction" prefHeight="49.0" prefWidth="102.0" text="Block Lane" />
@@ -20,5 +19,10 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button layoutX="426.0" layoutY="312.0" mnemonicParsing="false" onAction="#backOnaction" prefHeight="46.0" prefWidth="96.0" text="Back">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
