--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/detectandflag.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/detectandflag.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.DetectandflagController">
    <children>
       <ComboBox fx:id="selectboothCb" layoutX="41.0" layoutY="105.0" prefHeight="35.0" prefWidth="150.0" promptText="Select Booth" />
@@ -20,5 +19,10 @@
          </font>
       </Label>
       <Button layoutX="60.0" layoutY="251.0" mnemonicParsing="false" onAction="#notifyadminOnaction" prefHeight="35.0" prefWidth="87.0" text="Notify Admin" />
+      <Button layoutX="471.0" layoutY="331.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
