--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/recieveliveallerts.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/recieveliveallerts.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="498.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.RecieveliveallertsController">
    <children>
       <TableView fx:id="alertTv" layoutX="40.0" layoutY="64.0" prefHeight="200.0" prefWidth="520.0">
@@ -30,5 +29,10 @@
             <Font size="23.0" />
          </font>
       </Label>
+      <Button layoutX="346.0" layoutY="426.0" mnemonicParsing="false" onAction="#backOnaction" text="Back">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
