--- a/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/communicatewithbooth.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sakim_2312005/Traffic_Inspector/communicatewithbooth.fxml
@@ -10,7 +10,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sakim_2312005.Traffic_Inspector.CommunicatewithboothController">
    <children>
       <ComboBox fx:id="selectrecipientCb" layoutX="56.0" layoutY="86.0" prefWidth="150.0" promptText="Select Recipient" />
-      <TextArea fx:id="messageinputtTa" layoutX="51.0" layoutY="175.0" prefHeight="200.0" prefWidth="200.0" promptText="Message Input" />
+      <TextArea fx:id="messageinputTa" layoutX="51.0" layoutY="175.0" prefHeight="200.0" prefWidth="200.0" promptText="Message Input" />
       <Button layoutX="300.0" layoutY="79.0" mnemonicParsing="false" onAction="#sendmessageOnaction" text="Send Message">
          <font>
             <Font size="19.0" />
