--- a/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/AgentDashboard.fxml
+++ b/src/main/resources/com/cse213project/toll_plaza_management/Sonda_2331200/Customer_Service_Agent/AgentDashboard.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.AgentDashboardController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cse213project.toll_plaza_management.Sonda_2331200.Customer_Service_Agent.AgentDashboardController">
+   <children>
+      <BorderPane layoutX="-13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="723.0">
+         <left>
+            <VBox prefHeight="432.0" prefWidth="170.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="agentdashboardbtn" mnemonicParsing="false" onAction="#ViewComplaintBtn" prefHeight="50.0" prefWidth="170.0" text="AgentDashboard" />
+                  <Button fx:id="assignedcomplaintsbtn" mnemonicParsing="false" onAction="#AssignComplainBtn" prefHeight="50.0" prefWidth="170.0" text="AssignedComplaints" />
+                  <Button fx:id="agentupdatestatusbtn" mnemonicParsing="false" onAction="#updateComplaintBtn" prefHeight="50.0" prefWidth="170.0" text="AgentUpdateStatus" />
+                  <Button fx:id="addnotebtn" mnemonicParsing="false" onAction="#viewReportBtn" prefHeight="50.0" prefWidth="170.0" text="AddNote" />
+                  <Button fx:id="closecomplaintbtn" mnemonicParsing="false" onAction="#remainderBtn" prefHeight="50.0" prefWidth="170.0" text="CloseComplaint" />
+                  <Button fx:id="searchComplainthistorybtn" mnemonicParsing="false" onAction="#PerfomanceBtn" prefHeight="50.0" prefWidth="170.0" text="SearchComplaintHistory" />
+                  <Button fx:id="contactcustomerbtn" mnemonicParsing="false" onAction="#deleteComplaintBtn" prefHeight="50.0" prefWidth="170.0" text="ContactCustomer" />
+                  <Button fx:id="logoutbtn" mnemonicParsing="false" onAction="#logout" prefHeight="62.0" prefWidth="170.0" text="Logout" />
+               </children>
+            </VBox>
+         </left>
+         <top>
+            <Label alignment="CENTER" prefHeight="68.0" prefWidth="700.0" text="Agent Dashboard " BorderPane.alignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+            </Label>
+         </top>
+      </BorderPane>
+   </children>
 </AnchorPane>
